fix z-indexes

--- a/src/components/TopNav/MobileMenu/style.module.scss
+++ b/src/components/TopNav/MobileMenu/style.module.scss
@@ -10,7 +10,7 @@
   top: 80px;
   transform: translateY(0);
   width: 100%;
-  z-index: 2;
+  z-index: 3;
 }
 
 .overlay {
